# paranoid

./: Cargo.toml  README.md
src/: app.rs  args.rs  globals.rs  main.rs  utils.rs
src/tor/: mod.rs  proxy.rs  regen.rs
