[package]
name = "paranoid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
arti = "1.2.1"
arti-client = "0.17.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
console = "0.15.8"
futures = "0.3.30"
libc = "0.2.153"
log = "0.4.21"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tor-config = "0.17.0"
tor-error = "0.17.0"
tor-rtcompat = "0.17.0"
tor-socksproto = "0.17.0"
